--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ body{
     background-color:red;
     
 }
+body{
+    overflow: hidden;
+}
 @font-face {
     font-family: zebrawood;
     src: url(../Zebrawood-Regular.otf);
