--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,11 @@ body{
     background-color:red;
     
 }
-body{
-    overflow: hidden;
+html{
+    overflow-x: hidden;
+}
+body {
+    overflow:hidden;
 }
 @font-face {
     font-family: zebrawood;
